Fix: Contrast issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -108,8 +108,8 @@ header h1 {
   display: inline-block;
   padding: 10px 20px;
   font-size: 16px;
-  color: white;
-  background-color: #007bff;
+  color: black;
+  background-color: rgb(76, 206, 238);
   border: none;
   border-radius: 5px;
   text-align: center;
